--- a/content.html
+++ b/content.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Контент подъехал</title>
+    <title>Контент подъехал!</title>
     <meta charset="utf-8">
 </head>
 <body>
