adding git add .

--- a/content.html
+++ b/content.html
@@ -5,6 +5,6 @@
     <meta charset="utf-8">
 </head>
 <body>
-    <div>Hello from content1!</div>
+    <div>Hello from content1!!!</div>
 </body>
 </html>
